--- a/frontend_mentor/js/fylo-dark-theme-landing-page-master/fylo_dark.html
+++ b/frontend_mentor/js/fylo-dark-theme-landing-page-master/fylo_dark.html
@@ -139,7 +139,8 @@
             <li>Blog</li>
         </ul>
         <ul class="share">
-            <li><a href="https://www.facebook.com/"><img src="../../image_frontend/icon-facebook.svg"></a></li>
+            <li><a href="https://www.facebook.com/"><img src="../../image_frontend/icon-facebook.svg"
+                        alt="Facebook"></a></li>
             <li><a href="https://twitter.com/explore"><img src="../../image_frontend/icon-twitter.svg"></a></li>
             <li> <a href="https://www.instagram.com/?hl=en"><img src="../../image_frontend/icon-instagram.svg"></a></li>
 
