--- a/frontend_mentor/js/project-tracking-intro-component-master/project_tracking.html
+++ b/frontend_mentor/js/project-tracking-intro-component-master/project_tracking.html
@@ -16,11 +16,12 @@
     <main class="container">
         <div class="bg"></div>
         <header>
-            <div><img src="./images/logo3.svg" alt="logo" class="logo" id="logo" alt="Logo"></div>
+            <div><img src="./images/logo3.svg" class="logo" id="logo" alt="Logo"></div>
             <div class="menu">
                 <div><a href="#" class="open">Product </a></div>
                 <div><a href="#" class="open">Features </a></div>
                 <div><a href="#" class="open">Pricing </a></div>
+                <div><a href="#" class="open1" style="font-size:large">.</a></div>
                 <div><a href="#" class="open1">Login </a></div>
             </div>
         </header>
@@ -33,7 +34,7 @@
                     </div><span>Project planning and time tracking <br>for agile teams</span>
                     <br>
                     <div class="five">
-                        <p class="third"><input type="submit" value="Schedule a demo" class="demo">to see a live preview
+                        <p class="third"><input type="button" value="SCHEDULE A DEMO" class="demo">to see a live preview
                         </p>
                     </div>
                 </div>
