--- a/indexes.html
+++ b/indexes.html
@@ -706,6 +706,18 @@
                                         </a>
                                     </div>
                                 </li>
+                                <li>
+                                    <div> <a
+                                            href="./frontend_mentor/js/advice-generator-app-main/themes/advice_generator.css">Adivice
+                                            Generator CSS</a>
+
+                                    </div>
+                                    <div> <a
+                                            href="./frontend_mentor/js/advice-generator-app-main/advise_generator.html">Adivice
+                                            Generator
+                                        </a>
+                                    </div>
+                                </li>
                             </ol>
                         </td>
                         <td>
