--- a/indexes.html
+++ b/indexes.html
@@ -718,6 +718,18 @@
                                         </a>
                                     </div>
                                 </li>
+                                <li>
+                                    <div> <a
+                                            href="./frontend_mentor/js/loopstudios-landing-page-main/themes/loopstudio.css">LoopStudio
+                                            CSS
+                                        </a>
+
+                                    </div>
+                                    <div> <a href="./frontend_mentor/js/loopstudios-landing-page-main/loopstudio.html">LoopStudio
+
+                                        </a>
+                                    </div>
+                                </li>
                             </ol>
                         </td>
                         <td>
