--- a/indexes.html
+++ b/indexes.html
@@ -730,6 +730,21 @@
                                         </a>
                                     </div>
                                 </li>
+                                <li>
+                                    <div> <a
+                                            href="./frontend_mentor/js/interactive-pricing-component-main/themes/interactive.css">Interactive
+                                            Pricing Component-main
+                                            CSS
+                                        </a>
+
+                                    </div>
+                                    <div> <a
+                                            href="./frontend_mentor/js/interactive-pricing-component-main/interactive.html">Interactive
+                                            Pricing Component-main"
+
+                                        </a>
+                                    </div>
+                                </li>
                             </ol>
                         </td>
                         <td>
