--- a/indexes.html
+++ b/indexes.html
@@ -745,6 +745,20 @@
                                         </a>
                                     </div>
                                 </li>
+                                <li>
+                                    <div> <a
+                                            href="./frontend_mentor/js/social-media-dashboard-with-theme-switcher-master/themes/socialmedia.css">Social
+                                            Media Dashboard
+                                        </a>
+
+                                    </div>
+                                    <div> <a
+                                            href="./frontend_mentor/js/social-media-dashboard-with-theme-switcher-master/social.html">Social
+                                            Media Dashboard
+
+                                        </a>
+                                    </div>
+                                </li>
                             </ol>
                         </td>
                         <td>
