--- a/frontend_mentor/js/time-tracking-dashboard-main/timetracking.html
+++ b/frontend_mentor/js/time-tracking-dashboard-main/timetracking.html
@@ -189,7 +189,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="social"><img src="./images/icon-social.svg" alt="Social_image" id="image2"
+                <div class="social2"><img src="./images/icon-social.svg" alt="Social_image" id="image2"
                         class="social_image2">
                     <div class="social_in2">
                         <p>Social</p>
@@ -207,7 +207,7 @@
                 </div>
             </div>
             <div class="boxd_month">
-                <div class="study"><img src="./images/icon-study.svg" alt="Study_image2" id="image2"
+                <div class="study2"><img src="./images/icon-study.svg" alt="Study_image2" id="image2"
                         class="study_image2">
                     <div class="study_in2">
                         <p>Study</p>
@@ -223,14 +223,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="selfcare"><img src="./images/icon-self-care.svg" alt="Selfcare_image" id="image2"
+                <div class="selfcare2"><img src="./images/icon-self-care.svg" alt="Selfcare_image" id="image2"
                         class="selfcare_image2">
                     <div class="selfcare_in2">
                         <p>Selfcare</p>
                         <div class="activity_time2">
                             <span class="activity_current_time2">7hrs</span>
                         </div>
-                        <div class="activity_previous_time">
+                        <div class="activity_previous_time2">
                             <div id="footer2">
                                 <div class="time_window2">Last Month</div>
                                 <div> &nbsp;- &nbsp;</div>
@@ -262,7 +262,7 @@
                         <div class="activity_time1">
                             <span class="activity_current_time1">5hrs</span>
                         </div>
-                        <div class="activity_previous_time">
+                        <div class="activity_previous_time1">
                             <div id="footer1">
                                 <div class="time_window1">Last Day</div>
                                 <div> &nbsp;- &nbsp;</div>
