--- a/indexes.html
+++ b/indexes.html
@@ -650,6 +650,10 @@
                                         </a>
                                     </div>
                                 </li>
+                                <li>
+                                    <div><a href src="../../js_basic_lessons/modules">Currency
+                                            Conversion</a></div>
+                                </li>
 
 
                             </ol>
