--- a/indexes.html
+++ b/indexes.html
@@ -651,7 +651,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <div><a href src="../../js_basic_lessons/modules">Currency
+                                    <div><a href src="./modules/currencyconversion.html">Currency
                                             Conversion</a></div>
                                 </li>
 
