--- a/ng-workspace/demoa-app/src/index.html
+++ b/ng-workspace/demoa-app/src/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
+  <div class="container"></div>
   <app-header></app-header>
   <my-root></my-root>
   <app-root></app-root>
-  <app-boxa></app-boxa>
   <app-footer></app-footer>
+  </div>
 </body>
 
 </html>
