--- a/frontend_mentor/js/report/report.html
+++ b/frontend_mentor/js/report/report.html
@@ -58,9 +58,9 @@
             </div><br>
             <div>
                 <label id="result">Result :</label><br>
-                <input type="radio" id="myresult" name="result" value="Positive" onclick="radiores()">
+                <input type="radio" id="myresult" name="result" value="Positive">
                 <label>Positive</label><br>
-                <input type="radio" id="myresult1" name="result" value="Negative" onclick="radiores1()">
+                <input type="radio" id="myresult1" name="result" value="Negative">
                 <label>Negative</label><br>
             </div><br>
             <div>
