--- a/frontend_mentor/js/report/report.html
+++ b/frontend_mentor/js/report/report.html
@@ -107,7 +107,7 @@
         <label for="valueTosearch">Enter Aadhar Value to search :</label>
         <input id="searchTerm" class="form-control" placeholder="Enter Aadhar Card Number" onkeyup="doSearch()">
     </div>
-    <script type="text/javascript" src="./city.js"></script>
+    <script type="module" src="./report.js"></script>
 
 </body>
 
