--- a/frontend_mentor/js/report/report.html
+++ b/frontend_mentor/js/report/report.html
@@ -105,7 +105,10 @@
     </table>
     <div id="search">
         <label for="valueTosearch">Enter Aadhar Value to search :</label>
-        <input id="searchTerm" class="form-control" placeholder="Enter Aadhar Card Number" onkeyup="doSearch()">
+        <input id="searchTerm" class="form-control" placeholder="Enter Aadhar Card Number">
+        <div>
+            <button type="submit" value="search" id="search">Search</button>
+        </div>
     </div>
     <script type="module" src="./report.js"></script>
 
