--- a/frontend_mentor/js/report/report.html
+++ b/frontend_mentor/js/report/report.html
@@ -106,9 +106,7 @@
     <div id="search">
         <label for="valueTosearch">Enter Aadhar Value to search :</label>
         <input id="searchTerm" class="form-control" placeholder="Enter Aadhar Card Number">
-        <div>
-            <button type="submit" value="search" id="search">Search</button>
-        </div>
+        <button type="submit" value="search" id="search1">Search</button>
     </div>
     <script type="module" src="./report.js"></script>
 
