--- a/indexes.html
+++ b/indexes.html
@@ -525,6 +525,12 @@
 
                                     </div>
                                 </li>
+                                <li>
+                                    <div>
+                                        <a href="./ng-workspace/demob-app/src/app">Covid Form in
+                                            Angular</a>
+                                    </div>
+                                </li>
     </li>
     </ol>
     </td>
