--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1><i>Mind Units</i></h1>
+        <h1>Mind Units</h1>
         <div class="option">
             <div><a onclick="display_about_me()" ondblclick="hide_about_me()">About Me</a></div>&#160;&#160;
             <div><a href="./indexes.html">Project</a></div>
@@ -22,7 +22,8 @@
     </header>
 
     <main class="container">
-        <img class="image" src="./images/frontend.jpg">
+        <img class="image">
+        <!-- src="./images/overall_topic.jpg"> -->
     </main>
 </body>
 
