--- a/indexes.html
+++ b/indexes.html
@@ -378,6 +378,11 @@
                                         <a href="./src/csslessons/page27.css">CSS Lessons:Page 27 css</a>
                                     </div>
                                 </li>
+                                <li>
+                                    <div>
+                                        <a href="./project/project.html">Logo</a>
+                                    </div>
+                                </li>
                             </ol>
                         </td>
                         <td>
